--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-window",
+  "name": "@brandtotal/react-window",
   "version": "1.3.1",
   "description":
     "React components for efficiently rendering large, scrollable lists and tabular data",
